<resources>
    <string name="app_name">HerB</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have account? <b>Sign up</b></string>
    <string name="setup_profile">Setup Profile</string>
    <string name="display_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="done">Done</string>
    <string name="bpm">beats per minute</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
</resources>
