<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".125" />

    <android.support.constraint.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".875" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black_96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/tv_display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.325" />

    <EditText
        android:id="@+id/tv_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_display_name" />

    <EditText
        android:id="@+id/tv_email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_age" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_email_address" />

    <EditText
        android:id="@+id/tv_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/end_guideline"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

</android.support.constraint.ConstraintLayout>